Editing & Designing a new folder structures

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,13 @@ trial.py
 reg_model/__pycache__
 reg_model/config/__pycache__
 reg_model/preprocessing/__pycache__
-
 reg_model.egg-info
+
 dockers
 build
+
+model_serving/legacy_files
+model_serving/support_files
+model_serving/logs
+
+
