--- a/.gitignore
+++ b/.gitignore
@@ -6,17 +6,19 @@ examples
 dataset
 tests
 trial.py
+dockers
+build
+
 
 reg_model/__pycache__
 reg_model/config/__pycache__
 reg_model/preprocessing/__pycache__
 reg_model.egg-info
 
-dockers
-build
 
 model_serving/legacy_files
 model_serving/support_files
 model_serving/logs
-
+model_serving/data
+model_serving/__pycache__
 
