--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
 .ipynb_checkpoints
 .vscode
-notebook
-images
-examples
-dataset
-tests
-trial.py
+__pycache__
 
-reg_model/__pycache__
-reg_model/config/__pycache__
-reg_model/preprocessing/__pycache__
+model_serving
+test
+docker 
 
-reg_model.egg-info
-dockers
-build
+
+
